--- a/app/index.html
+++ b/app/index.html
@@ -25,31 +25,16 @@
     <div class="wrapper"
         <div class="accordion">
             <div class="segment">
-                <h3 class="accordHead"> Hey Guy </h3>
-                    <p class="accordBody">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-                    tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-                    quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-                    consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
-                    cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
-                    proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+                <h3 class="accordHead">Look At This Jade Statue I Found</h3>
+                    <p class="accordBody">  Ph'nglui mglw'nafh Cthulhu R'lyeh wgah'nagl fhtagn. Grah'n geb Chaugnar Faugnagl mnahn' tharanak, athg hupadghyar y'hah zhro vulgtmoth namg uaaah kn'a vulgtm, 'ai fhtagn chtenff shagg li'hee bug y-goka ph'hlirgh ehyenyth. Syha'h goka stell'bsna geb wgah'n uaaah shagg, n'ghft ya vulgtm Azathoth ronoth ph'Cthulhu, h'R'lyeh h''bthnk Shub-Niggurath hupadgh Tsathoggua. Tharanak nglui Dagon grah'nor lw'nafh hrii hupadgh hrii nafluh'e mnahn', nilgh'ri hafh'drnog Azathoth ch' ilyaanyth grah'n cR'lyeh. Ee nog Hastur R'lyeh nas'uhn nog sll'ha Cthulhu llll, ronoth syha'h nnnnog 'fhalma fhtagn athg lllloth, gnaiih llllog ph'ee sgn'wahl ebunma f'llll li'hee. Natharanak Tsathoggua n'gha cs'uhn shugg phlegeth n'gha goka bug mnahn' ch', Yoggoth Nyarlathotep stell'bsna ftaghu sll'ha n'gha hafh'drn hrii ch' naflshogg phlegeth, k'yarnak zhro hupadgh goka naflbug shogg fhtagn hafh'drn Hastur. </p>
             </div>
             <div class="segment">
-                <h3 class="accordHead"> Let Me Try </h3>
-                    <p class="accordBody">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-                    tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-                    quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-                    consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
-                    cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
-                    proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+                <h3 class="accordHead"> Lost At Sea; Monsters After Me </h3>
+                    <p class="accordBody">Ftaghu syha'h lloigagl nakn'a zhro n'gha epnyth shugg tharanak, f'orr'e ph'throd y-ftaghu shtungglior nglui Shub-Niggurath 'ai ph'shtunggli, ngs'uhn cwgah'n ngilyaa shagg ph'Azathoth h'ilyaa mnahn' h'kn'a, ph'hupadgh kadishtu fm'latgh h'n'ghft llll throdyar 'bthnk. Uh'e wgah'n y'hah ep llll li'hee lloig mg hrii shtunggli f'llll naflthrod, grah'n ep haiyar haiagl Yoggoth naflNyarlathotep h'Yoggoth chtenffnyth Chaugnar Faugn hupadgh, ronagl Azathoth f'fm'latgh hlirgh shagg geb phlegeth ah ch' geb. N'gha kadishtu gof'nn vulgtlagln Tsathoggua kadishtu stell'bsna nglui stell'bsna athgog hai, f'ya ph'uaaah ehye stell'bsna sll'ha shugg fhtagn chtenff ch'nyth, ckn'a ron nnnlw'nafh mgor naflnw r'luh stell'bsna ngthrod ya. </p>
             </div>
             <div class="segment">                
-                <h3 class="accordBody"> I Will Fly </h3>
-                    <p class="accordBody">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-                    tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-                    quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-                    consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
-                    cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
-                    proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+                <h3 class="accordHead"> The Gates Of Madness </h3>
+                    <p class="accordBody">Tharanak mnahn' uh'e nahai hafh'drn chtenff mg goka wgah'n shagg fhtagnog wgah'n kn'a ya k'yarnak ph's'uhn y-'bthnk, goka Shub-Niggurath mg lw'nafh ph'shugg fm'latgh Hastur gof'nn k'yarnak vulgtm na'ai kadishtu goka stell'bsna. Li'heeog n'gha Hastur y-uaaah ooboshu gnaiih ron mnahn' orr'e, athg s'uhn ooboshu f'kn'a ftaghu Tsathoggua Nyarlathotep vulgtm, haioth fm'latgh R'lyeh y'hah y-r'luh 'ai gnaiih. Ehye ngstell'bsna kadishtu cchtenff lloig throd ooboshu namnahn' ftaghu nghafh'drn, 'fhalmanyth sgn'wahl naebunma Chaugnar Faugn zhro ngfhtagn shugg r'luh. </p>
             </div>
         </div>
     </div>
